// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch component renders a Switch in "on" state 1`] = `
@media  {
  .c-gnfkGt {
    -webkit-appearance: none;
    appearance: none;
    background-color: var(--colors-tonal300);
    border: none;
    border-radius: var(--radii-round);
    cursor: pointer;
    display: flex;
    overflow: hidden;
    padding: var(--space-0);
    position: relative;
    transition: background-color 100ms ease;
    width: var(--sizes-4);
  }

  .c-gnfkGt:hover {
    background-color: var(--colors-tonal400);
  }

  .c-gnfkGt[data-state="checked"] {
    background-color: var(--colors-primary);
  }

  .c-gnfkGt[data-state="checked"]:hover {
    background-color: var(--colors-tertiary);
  }

  .c-jbfWYd {
    display: block;
    height: var(--sizes-1);
    width: var(--sizes-1);
    background-color: white;
    border-radius: var(--radii-round);
    transition: transform 100ms;
    will-change: transform;
  }

  .c-jbfWYd[data-state="checked"] {
    transform: translateX(calc(var(--sizes-2) - var(--space-1)));
  }
}

<div>
  <input
    checked=""
    hidden=""
    type="checkbox"
    value="on"
  />
  <button
    aria-checked="true"
    class="c-gnfkGt"
    data-state="checked"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="c-jbfWYd"
      data-state="checked"
    />
  </button>
</div>
`;

exports[`Switch component renders a disabled switch 1`] = `
@media  {
  .c-gnfkGt {
    -webkit-appearance: none;
    appearance: none;
    background-color: var(--colors-tonal300);
    border: none;
    border-radius: var(--radii-round);
    cursor: pointer;
    display: flex;
    overflow: hidden;
    padding: var(--space-0);
    position: relative;
    transition: background-color 100ms ease;
    width: var(--sizes-4);
  }

  .c-gnfkGt:hover {
    background-color: var(--colors-tonal400);
  }

  .c-gnfkGt[data-state="checked"] {
    background-color: var(--colors-primary);
  }

  .c-gnfkGt[data-state="checked"]:hover {
    background-color: var(--colors-tertiary);
  }

  .c-jbfWYd {
    display: block;
    height: var(--sizes-1);
    width: var(--sizes-1);
    background-color: white;
    border-radius: var(--radii-round);
    transition: transform 100ms;
    will-change: transform;
  }

  .c-jbfWYd[data-state="checked"] {
    transform: translateX(calc(var(--sizes-2) - var(--space-1)));
  }
}

<div>
  <input
    disabled=""
    hidden=""
    type="checkbox"
    value="on"
  />
  <button
    aria-checked="false"
    class="c-gnfkGt"
    data-disabled=""
    data-state="unchecked"
    disabled=""
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="c-jbfWYd"
      data-disabled=""
      data-state="unchecked"
    />
  </button>
</div>
`;

exports[`Switch component renders a switch 1`] = `
@media  {
  .c-gnfkGt {
    -webkit-appearance: none;
    appearance: none;
    background-color: var(--colors-tonal300);
    border: none;
    border-radius: var(--radii-round);
    cursor: pointer;
    display: flex;
    overflow: hidden;
    padding: var(--space-0);
    position: relative;
    transition: background-color 100ms ease;
    width: var(--sizes-4);
  }

  .c-gnfkGt:hover {
    background-color: var(--colors-tonal400);
  }

  .c-gnfkGt[data-state="checked"] {
    background-color: var(--colors-primary);
  }

  .c-gnfkGt[data-state="checked"]:hover {
    background-color: var(--colors-tertiary);
  }

  .c-jbfWYd {
    display: block;
    height: var(--sizes-1);
    width: var(--sizes-1);
    background-color: white;
    border-radius: var(--radii-round);
    transition: transform 100ms;
    will-change: transform;
  }

  .c-jbfWYd[data-state="checked"] {
    transform: translateX(calc(var(--sizes-2) - var(--space-1)));
  }
}

<div>
  <input
    hidden=""
    type="checkbox"
    value="on"
  />
  <button
    aria-checked="false"
    class="c-gnfkGt"
    data-state="unchecked"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="c-jbfWYd"
      data-state="unchecked"
    />
  </button>
</div>
`;
